<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_windows"
    android:orientation="vertical">

    <include layout="@layout/common_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp">

            <com.itutorgroup.tutorchat.phone.ui.common.UserInfoGroup
                android:id="@+id/group_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_actionbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group_user_info"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/common_split_line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/list_divider_margin_left_13"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <com.itutorgroup.tutorchat.phone.ui.common.item.SwitchItemView
                        android:id="@+id/newMessageWarn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:aiv_text="@string/new_message_alert" />

                    <com.itutorgroup.tutorchat.phone.ui.common.item.SwitchItemView
                        android:id="@+id/soundSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:aiv_text="@string/sound" />

                    <com.itutorgroup.tutorchat.phone.ui.common.item.SwitchItemView
                        android:id="@+id/vibrateSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:aiv_text="@string/vibrate" />

                    <com.itutorgroup.tutorchat.phone.ui.common.item.SwitchItemView
                        android:id="@+id/notDisturbStateView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:aiv_text="@string/do_not_disturb" />

                    <com.itutorgroup.tutorchat.phone.ui.common.item.AbsItemView
                        android:id="@+id/item_clear_all_chat_history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:aiv_text="@string/clear_chat_history" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="@color/bg_windows" />

                    <com.itutorgroup.tutorchat.phone.ui.common.item.NavItemView
                        android:id="@+id/item_local_env"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:aiv_text="@string/local_env" />

                    <com.itutorgroup.tutorchat.phone.ui.common.item.NavItemView
                        android:id="@+id/item_font_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:aiv_text="@string/app_text_size" />

                    <com.itutorgroup.tutorchat.phone.ui.common.item.AbsItemView
                        android:id="@+id/item_app_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:aiv_text="@string/app_version_name" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="@color/bg_windows" />

                    <com.itutorgroup.tutorchat.phone.ui.common.item.AbsItemView
                        android:id="@+id/item_server_env"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:aiv_text="@string/server_env" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/common_split_line_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/bg_windows" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/common_split_line_color" />

                <TextView
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/bg_common_preference"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/common_preference_item_text_color"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/common_split_line_color" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>