<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.itutorgroup.tutorchat.phone.ui.common.HeaderLayout
        android:id="@+id/common_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/chatlogo" />

    <TextView
        style="@style/InputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <com.itutorgroup.tutorchat.phone.ui.common.edittext.PasswordEditText
            android:id="@+id/edt_password"
            style="@style/LoginEditText"
            android:layout_marginTop="30dp"
            android:hint="@string/new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <com.itutorgroup.tutorchat.phone.ui.common.edittext.PasswordEditText
            android:id="@+id/edt_repeat_password"
            style="@style/LoginEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_login"
            style="@style/LoginButton"
            android:layout_marginTop="10dp"
            android:text="@string/login_button_text" />

    </LinearLayout>

</LinearLayout>