<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="60dp">

        <ImageView
            android:id="@+id/imv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/chatlogo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imv_logo"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <com.itutorgroup.tutorchat.phone.ui.common.edittext.ClearEditText
                android:id="@+id/edt_account"
                style="@style/LoginEditText"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/ic_input_left_account"
                android:hint="@string/hint_login_account"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                app:right_clear_icon="@drawable/ic_edt_clear" />

            <com.itutorgroup.tutorchat.phone.ui.common.edittext.PasswordEditText
                android:id="@+id/edt_password"
                style="@style/LoginEditText"
                android:layout_below="@+id/edt_account"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_input_left_password"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_tip_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/edt_password"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/forget_password"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/btn_login"
                style="@style/LoginButton"
                android:layout_below="@+id/tv_tip_forget_password"
                android:layout_marginTop="10dp"
                android:text="@string/login_button_text" />

            <TextView
                android:id="@+id/tv_tip_forget_password_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_marginTop="20dp"
                android:text="@string/tips_forget_login_password"
                android:textColor="#FA5A5A"
                android:textSize="14sp"
                android:visibility="gone" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>